2012-02-22  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Intrinsic bindings for sub, ref, refset
	and replace.

	* lib.c (do_sort): Static function renamed to sort_list.
	(swap, quicksort, sort_vec): New static functions.
	(sort): Made generic over lists, vectors and strings.
	(refset): New function.

	* lib.h (sort): Declaration updated (parameter name change).
	(refset): Declared.

	* txr.1: Mention refset.

	* txr.vim: Updated with refset.

2012-02-21  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Third argument of gethash becomes optional.

2012-02-21  Kaz Kylheku  <kaz@kylheku.com>

	Introducing optional arguments.

	* debug.c (help, show_bindings): put_string arguments reversed.

	* eval.c (bind_args): Support colon notation in interpreted
	function lambda lists for optional arguments. Improved error checking.
	(apply): Allow optional arguments to be left out.
	(dwim_loc): Reversed arguments to replace_str, replace_vec,
	replace_list.
	(eval_init): Numerous intrinsics now have arguments that are optional.
	New function rand introduced which reverses arguments relative to
	random. New intrinsic function hash introduced for alternative
	construction of hashes.

	* gc.c (sweep): Reversed arguments to put_char.

	* hash.c (weak_keys_k, weak_vals_k, equal_based_k): New keyword
	symbol variables.
	(hashv): New function.
	(hash_init): Intern new symbols.

	* hash.h (weak_keys_k, weak_vals_k, equal_based_k, hashv): Declared.

	* lib.c (colon_k): New keyword symbol variable.
	(replace_list, replace_str, replace_vec): Arguments rearranged.
	(tree_find): testfun becomes optional argument.
	(int_str): base becomes optional argument.
	(func_f0, func_f1, func_f2, func_f3, func_f4, func_n0,
	func_n1, func_n2, func_n3, func_n4,  func_f0v, func_f1v,
	func_f2v, func_f3v, func_f4v, func_n0v, func_n1v,
	func_n2v, func_n3v, func_n4v, func_interp): Initialize optargs to zero.
	(func_n0o, func_n1o, func_n2o, func_n3o, func_n4o): New functions.